--- a/css/verb_01.css
+++ b/css/verb_01.css
@@ -10,39 +10,68 @@ html {
 body {
   margin: 0;
   padding: 0;
-  min-width: 100vw;
+  width: 100vw;
   min-height: 100vh;
-}
-
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  height: auto;
-  width: auto;
+  font-family: 'Lato', sans-serif;
+  display: flex;
 }
 
 .content {
   height: 100%;
+  min-height: 100vh;
   width: 100%;
   padding: 20px;
+  background: #efefef;
 }
 
 .shape {
-  background: red;
-  width: 200px;
+  margin: 400px;
+  width: 200px;  
   height: 200px;
+  border-top-left-radius: 100px ;
+  border-top-right-radius: 100px ;
+  border-bottom-left-radius: 100px ;
+  border-bottom-right-radius: 100px ;
+  background: #FF7676;
 }
 
-.transforms {
-  transform: rotateZ(45deg);
-  transform: rotateX(45deg);
-  transform: rotateY(45deg);
-  transform: skewX(45deg);
-  transform: skewY(45deg);
-  transform: scaleX(1.5);
-  transform: scaleY(1.5);
-  transform: translateX(50px);
-  transform: translateY(50px);
+@keyframes beat {
+  0% {
+    transform: scale(1);
+
+  }
+  25% {
+    transform: scale(1.5);
+
+  }
+  50% {
+    transform: scale(1);
+
+  }
+  75% {
+    transform: scale(1.2);
+
+  }
+  100% {
+    transform: scale(1);
+
+  }
+}
+
+.variation-1 {
+  animation-name: beat;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+.variation-2 {
+  animation-name: beat;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+.variation-3 {
+  animation-name: beat;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
 }
